# Data-Engineering

./: .gitignore  README.md  interview-questions.md  microservice_api_patterns.md
Algorithms_Data_Structures/code_samples/design_patterns_python/: pyproject.toml
Algorithms_Data_Structures/code_samples/design_patterns_python/book/src/: chapter_3.md  chapter_4.md
Algorithms_Data_Structures/code_samples/design_patterns_python/design_patterns/behavioral/: visitor.py
Algorithms_Data_Structures/code_samples/design_patterns_python/design_patterns/creational/: factory.py
Algorithms_Data_Structures/code_samples/design_patterns_python/design_patterns/structural/: bridge.py
Algorithms_Data_Structures/code_samples/design_patterns_python/tests/behavioral/: test_command.py
Algorithms_Data_Structures/code_samples/design_patterns_python/tests/creational/: test_builder.py
Algorithms_Data_Structures/code_samples/design_patterns_python/tests/structural/: test_adapter.py  test_composite.py  test_decorator.py
Data Engineering Curriculum/5 - Streaming/4. kafka-playground/00_kong-fastapi-hello/microservice1/: pyproject.toml
Data Engineering Curriculum/5 - Streaming/4. kafka-playground/04_protobuf-kafka-fastapi/gamers/: Dockerfile.dev  pyproject.toml
Data Engineering Curriculum/5 - Streaming/4. kafka-playground/hello-aiokafka/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
Data Engineering Curriculum/5 - Streaming/4. kafka-playground/hello-aiokafka/fastapi_api/: consumer.py  main.py  settings.py
Data Engineering Curriculum/5 - Streaming/4. kafka-playground/py-kafka-dbc-connector/microservice1/: Dockerfile.dev  pyproject.toml
LLM-projects/: README.md
LLM-projects/mcp/mcp-simple-arxiv/: DEPLOYMENT.md  Dockerfile  Dockerfile.web  MANIFEST.in  README.md  TODO.md  pyproject.toml  smithery.yaml  test_client.py  test_web_client.py
LLM-projects/mcp/mcp-simple-arxiv/mcp_simple_arxiv/: __init__.py  server.py  taxonomy.json  update_taxonomy.py
LLM-projects/mcp/mcp-simple-pubmed/: .gitignore  Dockerfile  LICENSE  README.md  TODO.md  pyproject.toml  smithery.yaml
LLM-projects/mcp/mcp-simple-pubmed/.github/: funding.yml
LLM-projects/mcp/mcp-simple-pubmed/mcp_simple_pubmed/: __init__.py  __main__.py  fulltext_client.py  pubmed_client.py  pubmed_fetch.py  pubmed_search.py
LLM-projects/mcp/quick-mcp-example/: .gitignore  MCP_Setup.ipynb  README.md  client.py  mcp_server.py  pyproject.toml
LLM-projects/sample_projects/Multi-Agent-Data-Analyst/: .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
LLM-projects/sample_projects/Multi-Agent-Data-Analyst/.github/workflows/: format.yml
LLM-projects/sample_projects/Multi-Agent-Data-Analyst/.idx/: dev.nix
LLM-projects/sample_projects/Multi-Agent-Data-Analyst/app/: __init__.py  agent_orchestrator.py  visualization_server.py
LLM-projects/sample_projects/Multi-Agent-Data-Analyst/app/rag/: vector_store.py
LLM-projects/sample_projects/Multi-Agent-Data-Analyst/app/tools/: data_analyst_agent.py  sql_data_analyst_agent.py
LLM-projects/sample_projects/Multi-Agent-Data-Analyst/diagram/: arch.dio
LLM-projects/sample_projects/Multi-Agent-Data-Analyst/tests/: conftest.py  test_data_analyst_agent.py  test_main.py
LLM-projects/sample_projects/ai-travel-agent/: README.md  app.py  pyproject.toml
LLM-projects/sample_projects/ai-travel-agent/agents/: agent.py
LLM-projects/sample_projects/ai-travel-agent/agents/tools/: hotels_finder.py
LLM-projects/sample_projects/job-applicant-ai-agent/job-cv-match-ai/: .env.example  Dockerfile.dev  README.md  pyproject.toml
LLM-projects/sample_projects/job-applicant-ai-agent/job-cv-match-ai/app/: utils.py
LLM-projects/sample_projects/job-applicant-ai-agent/job-cv-match-ai/features/: ai-tailored-cv.feature  tailor-cv.feature
ML/LLM-projects/mcp/fastchat-mcp/: pyproject.toml
ML/LLM-projects/mcp/mcp-server-deep-research/: README.md  install.sh  pyproject.toml
ML/LLM-projects/mcp/mcp-wolframalpha/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
ML/LLM-projects/sample_projects/rag-pipelines/: .gitignore  pyproject.toml
projects/Collatz-conjecture/: README.md  pyproject.toml
projects/Collatz-conjecture/frontend/: index.html  main.js  styles.css
projects/Collatz-conjecture/src/collatz/: __init__.py  app.py  cli.py  core.py  models.py
projects/Collatz-conjecture/tests/: test_api.py  test_core.py
projects/conways-game-of-life/game-of-life-python/: README.md  pyproject.toml  requirements.txt
projects/conways-game-of-life/game-of-life-python/app/: cli.py  main.py
projects/conways-game-of-life/game-of-life-python/frontend/: app.js  index.html  serve.py  style.css
projects/conways-game-of-life/game-of-life-python/tests/: test_engine.py
projects/fault-tree/: README.md  pyproject.toml
projects/fault-tree/frontend/: .env.example  package-lock.json  package.json  vite.config.ts
projects/fault-tree/frontend/src/: App.tsx  api.ts  styles.css
projects/fault-tree/src/app/: main.py  schemas.py
projects/fault-tree/src/faulttree/: __init__.py
projects/fault-tree/tests/: example.json  test_alias.py  test_smoke.py
projects/mini-dataframe/: pyproject.toml  test.py
projects/mini-dataframe/src/mini_dataframe/: dsl.py
projects/mini-dataframe/tests/: test_mini_dataframe.py
projects/token-tracker/: README.md  pyproject.toml  usage_events.db  usage_events.db-shm  usage_events.db-wal
projects/token-tracker/frontend/: index.html  script.js  styles.css
projects/token-tracker/token_tracker/: __init__.py  __main__.py  app.py  dynamodb_scan_util.py
projects/token-tracker/token_tracker/routes/: chat.py  telemetry.py
projects/token-tracker/token_tracker/telemetry/: __init__.py  context.py  db_connector.py  dynamodb_table.py  litellm_instrumentation.py  sink.py
projects/vector-db/: pyproject.toml
projects/vector-db/src/vector_db/: __init__.py  database.py  distances.py  embeddings.py  query.py  records.py  table.py
projects/vector-db/tests/: conftest.py  test_distances.py  test_embeddings.py  test_indexes.py  test_table_and_query.py
(+3395 files in other folders)
