[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "collatz-conjecture"
version = "0.1.0"
description = "Collatz conjecture utilities with a FastAPI service"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Collatz Conjecture Maintainers" }]
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.22,<1.0",
  "httpx>=0.25,<1.0",
]

[project.scripts]
collatz = "collatz.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/collatz"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
