[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vector-db"
version = "0.1.0"
description = "Educational in-memory vector database with indices and query builder."
authors = [
    { name = "aj", email = "aj@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "numpy"
]

[tool.setuptools.packages.find]
where = ["src"]
