[project]
name = "simple-mcp-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.6.3",
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "mcp[cli]>=1.3.0",
    "openai>=1.65.2",
    "pypdf>=5.3.1",
]
