[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-of-life"
version = "0.1.0"
description = "FastAPI-based streaming Conway's Game of Life with CLI entrypoint."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.0",
]

[project.scripts]
game-of-life = "app.cli:main"

[tool.setuptools]
packages = ["app", "app.life"]

[tool.setuptools.package-data]
app = ["life/patterns.toml"]
