[project]
name = "mcp-wolframalpha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "fastmcp>=2.11.0",
    "google-generativeai>=0.8.5",
    "gradio>=5.39.0",
    "langchain-core>=0.3.72",
    "langchain-google-genai>=2.0.10",
    "python-dotenv>=1.1.1",
    "wolframalpha>=5.1.3",
]
