[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Muhammad Junaid <mr.junaidshaukat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.18"
psycopg = {extras = ["binary"], version = "^3.1.19"}
python-jose = "^3.3.0"
pytest = "^8.2.0"
httpx = "^0.27.0"
email-validator = "^2.1.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.3.0"
pydantic = "^2.7.1"
emails = "^0.6"
gunicorn = "^22.0.0"
jinja2 = "^3.1.4"
bcrypt = "^4.1.3"
pydantic-settings = "^2.2.1"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
